# airfrans_lib

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  __init__.py  airfrans.py  pyproject.toml  requirements.txt
docs/: conf.py  index.rst  requirements.txt
docs/source/: api.rst  conf.py  index.rst  modules.rst  usage.rst
docs/source/modules/: dataset.rst  naca.rst  root.rst  sampling.rst
docs/source/notes/: dataset.rst  installation.rst  introduction.rst  simulation.rst  visualization.rst
src/airfrans/: __init__.py  dataset.py  download.py  naca_generator.py  reorganize.py  sampling.py  simulation.py
